# lightning-hydra-tutorial

./: .gitignore  Dockerfile.eval  Dockerfile.infer  Dockerfile.train  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: .devcontainer.json
src/: eval.py  infer.py  train.py
src/datamodules/: dog_breed_datamodule.py
src/models/: dog_breed_classifier.py
